crates/squawk_parser/tests/snapshots/tests__alter_system_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_system.sql
---
SOURCE_FILE
  COMMENT "-- set_to"
  WHITESPACE "\n"
  ALTER_SYSTEM
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        LITERAL
          STRING "'v'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_equals"
  WHITESPACE "\n"
  ALTER_SYSTEM
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'v'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- schema"
  WHITESPACE "\n"
  ALTER_SYSTEM
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        EQ "="
        WHITESPACE " "
        LITERAL
          STRING "'v'"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_SYSTEM
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "foo"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "p"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_multiple"
  WHITESPACE "\n"
  ALTER_SYSTEM
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        LITERAL
          STRING "'v1'"
        COMMA ","
        WHITESPACE " "
        LITERAL
          STRING "'v2'"
        COMMA ","
        WHITESPACE " "
        LITERAL
          STRING "'v3'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_default"
  WHITESPACE "\n"
  ALTER_SYSTEM
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_CONFIG_PARAM
      SET_KW "set"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
      WHITESPACE " "
      TO_CONFIG_VALUE
        TO_KW "to"
        WHITESPACE " "
        DEFAULT_KW "default"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_param"
  WHITESPACE "\n"
  ALTER_SYSTEM
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      CONFIG_PARAMETER_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "p"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_all"
  WHITESPACE "\n"
  ALTER_SYSTEM
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    RESET_CONFIG_PARAM
      RESET_KW "reset"
      WHITESPACE " "
      ALL_KW "all"
    SEMICOLON ";"
  WHITESPACE "\n\n"
