crates/squawk_parser/tests/snapshots/tests__alter_tablespace_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_tablespace.sql
---
SOURCE_FILE
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_TABLESPACE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE_REF
      IDENT "t"
    WHITESPACE " "
    TABLESPACE_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      TABLESPACE
        IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_TABLESPACE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE_REF
      IDENT "t"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_TABLESPACE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE_REF
      IDENT "t"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_USER
          CURRENT_USER_KW "current_user"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_option"
  WHITESPACE "\n"
  ALTER_TABLESPACE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE_REF
      IDENT "t"
    WHITESPACE " "
    SET_OPTIONS
      SET_KW "set"
      WHITESPACE " "
      ATTRIBUTE_LIST
        L_PAREN "("
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "o"
          WHITESPACE " "
          EQ "="
          WHITESPACE " "
          ATTRIBUTE_VALUE
            PATH_TYPE
              PATH_REF
                PATH_SEGMENT_REF
                  IDENT "v"
        R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_multiple_options"
  WHITESPACE "\n"
  ALTER_TABLESPACE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE_REF
      IDENT "t"
    WHITESPACE " "
    SET_OPTIONS
      SET_KW "set"
      WHITESPACE " "
      ATTRIBUTE_LIST
        L_PAREN "("
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "o1"
          WHITESPACE " "
          EQ "="
          WHITESPACE " "
          ATTRIBUTE_VALUE
            PATH_TYPE
              PATH_REF
                PATH_SEGMENT_REF
                  IDENT "v1"
        COMMA ","
        WHITESPACE " "
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "o2"
          WHITESPACE " "
          EQ "="
          WHITESPACE " "
          ATTRIBUTE_VALUE
            PATH_TYPE
              PATH_REF
                PATH_SEGMENT_REF
                  IDENT "v2"
        R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_option"
  WHITESPACE "\n"
  ALTER_TABLESPACE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE_REF
      IDENT "t"
    WHITESPACE " "
    RESET_OPTIONS
      RESET_KW "reset"
      WHITESPACE " "
      ATTRIBUTE_LIST
        L_PAREN "("
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "o"
        R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_multiple_options"
  WHITESPACE "\n"
  ALTER_TABLESPACE
    ALTER_KW "alter"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    TABLESPACE_REF
      IDENT "t"
    WHITESPACE " "
    RESET_OPTIONS
      RESET_KW "reset"
      WHITESPACE " "
      ATTRIBUTE_LIST
        L_PAREN "("
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "o1"
        COMMA ","
        WHITESPACE " "
        ATTRIBUTE_OPTION
          ATTRIBUTE_NAME
            IDENT "o2"
        R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
