crates/squawk_parser/tests/snapshots/tests__alter_text_search_dictionary_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_text_search_dictionary.sql
---
SOURCE_FILE
  COMMENT "-- options"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_DICTIONARY
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "d"
    WHITESPACE " "
    ATTRIBUTE_LIST
      L_PAREN "("
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "a"
        WHITESPACE " "
        EQ "="
        WHITESPACE " "
        ATTRIBUTE_VALUE
          LITERAL
            INT_NUMBER "1"
      COMMA ","
      WHITESPACE "\n  "
      ATTRIBUTE_OPTION
        ATTRIBUTE_NAME
          IDENT "b"
      WHITESPACE "\n"
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_DICTIONARY
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "d"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      TEXT_SEARCH_DICTIONARY
        PATH
          PATH_SEGMENT
            IDENT "n"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_DICTIONARY
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "d"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_NAME_REF
          IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_DICTIONARY
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "d"
    WHITESPACE " "
    OWNER_TO
      OWNER_KW "owner"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      ROLE_REF
        ROLE_REF_CURRENT_USER
          CURRENT_USER_KW "current_user"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- schema"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_DICTIONARY
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    TEXT_SEARCH_DICTIONARY_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "d"
    WHITESPACE " "
    SET_SCHEMA
      SET_KW "set"
      WHITESPACE " "
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
