crates/squawk_parser/tests/snapshots/tests__alter_text_search_template_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_text_search_template.sql
---
SOURCE_FILE
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_TEMPLATE
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    TEMPLATE_KW "template"
    WHITESPACE " "
    TEXT_SEARCH_TEMPLATE_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "t"
    WHITESPACE " "
    TEXT_SEARCH_TEMPLATE_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      TEXT_SEARCH_TEMPLATE
        PATH
          PATH_SEGMENT
            IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_schema"
  WHITESPACE "\n"
  ALTER_TEXT_SEARCH_TEMPLATE
    ALTER_KW "alter"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    TEMPLATE_KW "template"
    WHITESPACE " "
    TEXT_SEARCH_TEMPLATE_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "t"
    WHITESPACE " "
    SET_SCHEMA
      SET_KW "set"
      WHITESPACE " "
      SCHEMA_KW "schema"
      WHITESPACE " "
      SCHEMA_REF
        IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
