crates/squawk_parser/tests/snapshots/tests__alter_trigger_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_trigger.sql
---
SOURCE_FILE
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_TRIGGER
    ALTER_KW "alter"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    TRIGGER_REF
      IDENT "t"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "x"
    WHITESPACE " "
    TRIGGER_RENAME_TO
      RENAME_KW "rename"
      WHITESPACE " "
      TO_KW "to"
      WHITESPACE " "
      TRIGGER
        IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- depends_on"
  WHITESPACE "\n"
  ALTER_TRIGGER
    ALTER_KW "alter"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    TRIGGER_REF
      IDENT "t"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "x"
    WHITESPACE " "
    DEPENDS_ON_EXTENSION
      DEPENDS_KW "depends"
      WHITESPACE " "
      ON_KW "on"
      WHITESPACE " "
      EXTENSION_KW "extension"
      WHITESPACE " "
      EXTENSION_REF
        IDENT "e"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  ALTER_TRIGGER
    ALTER_KW "alter"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    TRIGGER_REF
      IDENT "t"
    WHITESPACE " "
    ON_RELATION
      ON_KW "on"
      WHITESPACE " "
      RELATION_NAME_REF
        PATH_REF
          PATH_REF
            PATH_SEGMENT_REF
              IDENT "s"
          DOT "."
          PATH_SEGMENT_REF
            IDENT "t"
    WHITESPACE " "
    NO_DEPENDS_ON_EXTENSION
      NO_KW "no"
      WHITESPACE " "
      DEPENDS_KW "depends"
      WHITESPACE " "
      ON_KW "on"
      WHITESPACE " "
      EXTENSION_KW "extension"
      WHITESPACE " "
      EXTENSION_REF
        IDENT "e"
    SEMICOLON ";"
  WHITESPACE "\n\n"
